# C_WRDice

./: CMakeLists.txt
include/: wrdice.h
src/: battle.c  stats.c  vec_op.h  wrdice.c
